﻿4.0.21 - 21st August 2024
- For 'Enhance minimap' ('Interface'), the 'MoveAny' addon button will now show inside the combine addon buttons frame.

4.0.14 - 3rd July 2024
- For 'Enhance minimap' ('Interface'), added a button texture for Zygor.

4.0.13 - 26th June 2024
- For 'Show bag search box' ('Interface'), fixed an issue where only the first 6 guild bank tabs would be searched.

4.0.12 - 19th June 2024
- For 'Enhance professions' and 'Enhance trainers', adjusted frame layout slightly.

4.0.11 - 12th June 2024
- For 'Mute game sounds' ('System'), you can now mute the Singing Sunflower pet.

4.0.10 - 5th June 2024
- For 'Recent chat window', ('Chat'), increased the number of recent chat messages shown from 128 to 256.
- For 'Restore chat messages' ('Chat'), increased the number of restored chat messages from 128 to 256.
- For 'Filter chat messages' ('Chat'), added a setting to block guild announcements (such as guild member achievements).
- Structural changes.

4.0.07 - 15th May 2024
- For 'Enhance minimap' ('Interface'), added support for Narcissus custom minimap button.

4.0.06 - 15th May 2024
- Added a new option called 'Enhance flight map' ('Interface').  If enabled, you can customise the flight map (such as map scale, map position and icon size).  You can adjust the settings in the configuration panel.  Hold down ALT and drag the flight map to move it.
- Updated NPC skip list for 'Automate gossip' ('Automation').

4.0.05 - 8th May 2024
- Added custom class color support for 'Enhance tooltip' ('Interface') and 'Class colored frames' ('Frames').
- For 'Mute game sounds' ('System'), 'Trains' now applies to Goblin and Worgen races too.
- Updated NPC skip list for 'Automate gossip' ('Automation').
- Update to bag item and bank item search box code.
- Added ability to toggle the main panel by clicking the slash command logo in the interface options panel.

4.0.02 - 29th April 2024
- For 'Enhance dressup' ('Interface'), added ranged button layout.