@@ -1,4 +1,5 @@
 ﻿4.0.21 - 21st August 2024
+- Added a new option 'Block requested invites'.  If enabled, requests to invite a player to your group will be declined unless the player requesting to join is a friend.
 - For 'Enhance minimap' ('Interface'), the 'MoveAny' addon button will now show inside the combine addon buttons frame.
 
 4.0.14 - 3rd July 2024
